# soupxcell

./: .gitignore  Cargo.toml  README.md  cmd_to_execute.md  complete_mathematical_breakdown.md  soupxcell_blackboard.html  soupxcell_math_model_explanation.html  soupxcell_playground.html
.claude/skills/explain-math-model/: SKILL.md  commands.txt
.claude/skills/explain-soupxcell-story/: SKILL.md  commands.txt
profiles/: default.json  fast_test.json  simulate_high.json
soupxcell_output/: correction_summary.csv  metrics.txt  simulation_benchmark.csv  soup_vector.csv  soupxcell.err  soupxcell_report.html
soupxcell_output/figures/: cluster_composition.html  cluster_data.json  contamination_progression.html  floor_per_locus.html  per_cluster_correction.html  rmse_linearity.html  silhouette_comparison.html  soup_vector_profile.html  umap_before_after.html
soupxcell_output/figures/image_data/: correction_distribution.json  floor_per_locus.json  per_cluster_correction.json  rmse_linearity.json  silhouette_comparison.json  soup_vector_profile.json  tsne_before_after.json
src/: main.rs
src/analysis/: plots.rs
src/analysis/report/: cards.rs  css.rs  experiment.rs  interpretation.rs  methods.rs  mod.rs  params.rs  plot_embeds.rs  svgs.rs  tables.rs  utils.rs
src/config/: config_loader.rs  env_loader.rs  mod.rs  params.rs  params.yml
src/core/: corrector.rs  embedder.rs  mod.rs  simulator.rs
src/domain/: math.rs  types.rs
src/infra/: gui_server.rs  io.rs  logger.rs  mod.rs  preflight.rs  soupxcell_gui.html
src/infra/figures_html/: cluster_composition.html  (+4 more)
